--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.0
 beautifulsoup4==4.9.3
 certifi==2021.5.30
+charset-normalizer==2.0.3
 cloudinary==1.26.0
 config==0.3.9
 dj-database-url==0.5.0
@@ -11,11 +12,13 @@ django-crispy-forms==1.12.0
 django-heroku==0.3.1
 djangorestframework==3.12.4
 gunicorn==19.0.0
+idna==3.2
 importlib-metadata==2.1.1
 Pillow==8.2.0
 psycopg2==2.8.6
 python-decouple==3.1
 pytz==2021.1
+requests==2.26.0
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
